@@ -1,13 +1,13 @@
-package com.yooyoung.clotheser.rental.service;
+package com.yooyoung.clotheser.clothes.service;
 
 import com.amazonaws.services.s3.AmazonS3;
 import com.amazonaws.services.s3.model.ObjectMetadata;
+import com.yooyoung.clotheser.clothes.domain.Clothes;
+import com.yooyoung.clotheser.clothes.domain.ClothesImg;
+import com.yooyoung.clotheser.clothes.repository.ClothesImgRepository;
 import com.yooyoung.clotheser.global.entity.BaseException;
-import com.yooyoung.clotheser.rental.domain.Rental;
-import com.yooyoung.clotheser.rental.domain.RentalImg;
-import com.yooyoung.clotheser.rental.repository.RentalImgRepository;
-import lombok.RequiredArgsConstructor;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -18,27 +18,26 @@ import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-import static com.yooyoung.clotheser.global.entity.BaseResponseStatus.*;
-import static org.springframework.http.HttpStatus.*;
+import static com.yooyoung.clotheser.global.entity.BaseResponseStatus.S3_UPLOAD_ERROR;
+import static org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR;
 
 @Service
 @RequiredArgsConstructor
-public class RentalImageService {
+public class ClothesImageService {
 
     private final AmazonS3 amazonS3;
 
     @Value("${cloud.aws.s3.bucket}")
     private String bucket;
 
-    private final RentalImgRepository rentalImgRepository;
+    private final ClothesImgRepository clothesImgRepository;
 
-    /* 대여글 이미지 저장 */
-    public List<String> uploadImages(MultipartFile[] images, Rental rental) throws BaseException {
+    /* 보유 옷 이미지 저장 */
+    public List<String> uploadClothesImages(MultipartFile[] images, Clothes clothes) throws BaseException {
         List<String> imgUrls = new ArrayList<>();
 
-        // 대여글 이미지 없는 경우 (1: Swaager, 2: Postman)
+        // 보유 옷 이미지 없는 경우 (1: Swaager, 2: Postman)
         if (images.length == 0 || images[0].isEmpty()) {
             return null;
         }
@@ -46,7 +45,7 @@ public class RentalImageService {
         try {
             for (MultipartFile image : images) {
                 // 파일명 중복 방지 위해 랜덤 숫자 추가
-                String fileName = "rentals/" + UUID.randomUUID() + "_" + image.getOriginalFilename();
+                String fileName = "clothes/" + UUID.randomUUID() + "_" + image.getOriginalFilename();
 
                 ObjectMetadata metadata = new ObjectMetadata();
                 metadata.setContentLength(image.getSize());
@@ -57,12 +56,12 @@ public class RentalImageService {
                 imgUrls.add(imgUrl);
 
                 // 데이터베이스에 이미지 URL 저장
-                RentalImg rentalImg = RentalImg.builder()
+                ClothesImg clothesImg = ClothesImg.builder()
                         .imgUrl(imgUrl)
-                        .rental(rental)
+                        .clothes(clothes)
                         .build();
 
-                rentalImgRepository.save(rentalImg);
+                clothesImgRepository.save(clothesImg);
             }
         } catch (IOException e) {
             throw new BaseException(S3_UPLOAD_ERROR, INTERNAL_SERVER_ERROR);
@@ -71,20 +70,21 @@ public class RentalImageService {
         return imgUrls;
     }
 
-    /* 대여글 이미지 삭제 */
-    public void deleteImages(List<RentalImg> rentalImgs) {
+    /* 보유 옷 이미지 삭제 */
+    public void deleteClothesImages(List<ClothesImg> clothesImgs) {
         // S3에서 삭제
-        for (RentalImg rentalImg : rentalImgs) {
-            String fileName = rentalImg.getImgUrl().substring(rentalImg.getImgUrl().lastIndexOf("/") + 1);
+        for (ClothesImg clothesImg : clothesImgs) {
+            String fileName = clothesImg.getImgUrl().substring(clothesImg.getImgUrl().lastIndexOf("/") + 1);
             String decodedFileName= URLDecoder.decode(fileName, StandardCharsets.UTF_8);
-            amazonS3.deleteObject(bucket, "rentals/" + decodedFileName);
+            amazonS3.deleteObject(bucket, "clothes/" + decodedFileName);
         }
 
         // DB에서 삭제
-        List<Long> rentalImgIds = rentalImgs.stream()
-                .map(RentalImg::getId)
-                .collect(Collectors.toList());
-        rentalImgRepository.deleteAllByIdInBatch(rentalImgIds);
+        List<Long> clothesImgIds = clothesImgs.stream()
+                .map(ClothesImg::getId)
+                .toList();
+        clothesImgRepository.deleteAllByIdInBatch(clothesImgIds);
     }
-}
 
+
+}
